--- a/Config-Client/config-server-client.properties
+++ b/Config-Client/config-server-client.properties
@@ -1,1 +1,8 @@
 msg: hello from git
+server.port=8085
+#Name of the application
+spring.application.name=gateway
+
+## PostgreSQL
+# JDBC URL of the database.
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
